--- a/5html/contacto.html
+++ b/5html/contacto.html
@@ -7,6 +7,21 @@
     <title>Contacto</title>
 </head>
 <body>
+    <header>
+        <nav>
+
+            <h1>BIENVENIDOS A BLOG DE ALEJANDRO</h1>
+        <ul>
+            <li><a href="PRESENTACION.html">Inicio</a></li>
+            <li><a href="galeria de experiencias.html">Galeria</a></li>
+            <li><a href="Formulario.html">Formulario</a></li>
+            <li><a href="comentario.html">Comentario</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+
+            
+        </ul>
+        </nav>
+    </header>
     <main>
 
 
@@ -32,5 +47,6 @@
         </table>
         
     </main>
+    <footer>AleGonzalezGitHub</footer>
 </body>
 </html>
