--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div></div>
         </nav>
     
-    <header class="header">
+    <header class="header" data-aos="flip-right">
         <h3><p>Bienvenidos al blog de Alejandro</p></h3>
     </header>
     <main class="main">   
